<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="onClick"
            type="android.view.View.OnClickListener" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="@dimen/_8sdp"
            app:elevation="@dimen/_8sdp">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:elevation="@dimen/_8sdp"
                app:contentInsetStart="0dp"
                app:elevation="6dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivBack"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:onClick="@{(v)->onClick.onClick(v)}"
                        android:padding="@dimen/_18sdp"
                        android:src="@drawable/ic_back"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:includeFontPadding="false"
                        android:text="@string/add_task"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="normal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/boxTitle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="14dp"
                    android:hint="@string/task_title"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                        tools:text="Task Title" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/boxDescription"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="14dp"
                    android:hint="@string/description"
                    app:layout_constraintTop_toBottomOf="@+id/boxTitle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                        tools:text="Task Description" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/boxTaskStatus"
                    style="@style/MyAutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="14dp"
                    android:hint="@string/status"
                    app:layout_constraintTop_toBottomOf="@+id/boxDescription">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/etDropdownTaskStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:maxLines="1"
                        android:popupBackground="@color/white"
                        android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                        tools:text="Task Status" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/boxDueDates"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="14dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:hint="@string/due_date"
                    android:onClick="@{(v)->onClick.onClick(v)}"
                    app:layout_constraintTop_toBottomOf="@+id/boxTaskStatus">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etDueDates"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:enabled="true"
                        android:focusable="true"
                        android:focusableInTouchMode="false"
                        android:imeOptions="actionNext"
                        android:inputType="date"
                        android:onClick="@{(v)->onClick.onClick(v)}"
                        android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                        tools:text="10-4-2024" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/boxSubTaskOf"
                    style="@style/MyAutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="14dp"
                    android:hint="@string/sub_task_of"
                    app:layout_constraintTop_toBottomOf="@+id/boxDueDates">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/etDropdownSubTaskOf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:maxLines="1"
                        android:popupBackground="@color/white"
                        android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

                </com.google.android.material.textfield.TextInputLayout>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/boxSubTaskOf">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="14dp"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txtSubTask"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/sub_task_of"/>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvSubasks"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:orientation="vertical"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/searchBox"
                            tools:itemCount="2"
                            tools:listitem="@layout/adapter_tasks" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txtParentTask"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/parent_task_of"/>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvParentTasks"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:orientation="vertical"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/searchBox"
                            tools:itemCount="2"
                            tools:listitem="@layout/adapter_tasks" />

                    </LinearLayout>

                </ScrollView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSubmit"
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_14sdp"
                android:backgroundTint="@color/black"
                android:letterSpacing="0.01"
                android:onClick="@{(v)->onClick.onClick(v)}"
                android:padding="0dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:rippleColor="@color/black"
                app:strokeColor="@color/white" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>